# soundlooper

./: .gitignore  Cargo.toml  README.md
examples/: README.md  feature_demo.rs  multi_layer_mix.rs  record_playback.rs  simple_loop.rs
src/: lib.rs  main.rs
src/audio/: io.rs  layer.rs  lockfree_buffer.rs  looper.rs  mod.rs  peak_meter.rs  simd_mixer.rs  stream.rs  tempo.rs  undo_history.rs
src/ui/: mod.rs  terminal.rs
