[package]
name = "soundlooper"
version = "0.1.0"
edition = "2024"
description = "Terminal-based audio workstation for live looping and music creation. Built with Rust for high-performance real-time audio processing."
repository = "https://github.com/Cod-e-Codes/soundlooper"
license = "MIT"
keywords = ["audio", "music", "rust", "real-time", "terminal", "cross-platform", "daw", "tui", "wav", "audio-engine", "recording", "looper", "music-production", "audio-processing", "mixing", "cpal", "live-performance", "ratatui"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.100"
cpal = "0.16.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
hound = "3.5.1"
ratatui = "0.29.0"
ringbuf = "0.4.8"
rubato = "0.16.2"
serde = "1.0.228"
toml = "0.9.8"
